ops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learn-new
spec:
  selector:
    app: learn-new
  ports:
    - port: 80
      targetPort: 8000
