ops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn-new
spec:
  rules:
    - host: learn-new.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learn-new
                port:
                  number: 80
